use jspecify